Fixing bug 152927: can't script any plugin in nested EMBED tag inside an OBJECT tag from onLoad handler -- CNET radio does not play with Real because SetSource is called from onLoad r=kmcclusk@netscape.com sr=dveditz a=chofmann